# homebrew-age-mcp-server

./: README.md  age-mcp-server.rb  pyproject.toml
docs/: claude_desktop_config_sample.json
src/age_mcp_server/: __init__.py  server.py
