[project]
name = "age-mcp-server"
authors = [{ name = "Rio Fujita", email = "rifujita@microsoft.com" }]
version = "0.2.2"
license = { file = "LICENSE" }
description = "Apache AGE MCP Server"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = [
    "agefreighter>=1.0.0",
    "mcp>=1.4.1",
    "ply>=3.11",
    "psycopg[binary,pool]>=3.2.6",
]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-age-mcp-server"
Issues = "https://github.com/rioriost/homebrew-age-mcp-server/issues"

[project.scripts]
age-mcp-server = "age_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
