[project]
name = "age-mcp-server"
authors = [{ name = "Rio Fujita", email = "rifujita@microsoft.com" }]
version = "0.2.39"
license = { file = "LICENSE" }
description = "Apache AGE MCP Server"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = [
    "agefreighter>=1.0.28",
    "mcp>=1.25.0",
    "ply>=3.11",
    "psycopg-binary>=3.3.2",
    "psycopg-pool>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/rioriost/homebrew-age-mcp-server"
Issues = "https://github.com/rioriost/homebrew-age-mcp-server/issues"

[project.scripts]
age-mcp-server = "age_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["__pycache__", "*.rb", "uv.lock", "dist/.DS_Store", ".envrc"]

[dependency-groups]
dev = []
